--- a/templates/bundles/TwigBundle/Exception/error404.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error404.html.twig
@@ -19,6 +19,11 @@
 					<div>La page que vous recherchez n'existe pas.</div>
 				</div>
 			</div>
+			<div class="row">
+				<div class="col text-center mt-3">
+					<div class="fs-1">404</div>
+				</div>
+			</div>
 			<div class="row justify-content-center align-itms-center">
 				<div class="col text-center mt-3">
 					<div class="grid-item m-5"></div>
@@ -51,9 +56,9 @@
 				<div class="col text-center mt-3"></div>
 			</div>
 		</main>
-		{% include "footer.html.twig" %}
 	</div>
 {% endblock %}
+
 {% block javascripts %}
 	{{ parent() }}
 {% endblock %}
