--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -21,7 +21,11 @@
 				<div class="col-8 col-md-8 text-center mt-4">
 					<form method="post">
 						{% if error %}
-							<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+						<div class="row justify-content-center">
+							<div class="col-10 col-md-8 col-lg-6 text-center">
+								<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+							</div>
+						</div>
 						{% endif %}
 						<div class="row justify-content-center">
 							<div class="col-10 col-md-8 col-lg-6 text-start">
