--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -33,7 +33,7 @@
 					<div class="row d-flex justify-content-center">
 						<div class="col-12 col-md-8 col-lg-6 mt-3">
 							<div>{{ form_widget(registrationForm.agreeTerms) }}</div>
-							<div>{{ form_errors(registrationForm.agreeTerms) }}</div>
+							{# <div>{{ form_errors(registrationForm.agreeTerms) }}</div> #}
 						</div>
 					</div>
 					<div class="row justify-content-center mt-4">
